--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1306,6 +1306,69 @@
     "# Export the City_Data into a CSV.\n",
     "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract relevant fields from the DataFrame for plotting.\n",
+    "lats = city_data_df[\"Lat\"]\n",
+    "max_temps = city_data_df[\"Max Temp\"]\n",
+    "humidity = city_data_df[\"Humidity\"]\n",
+    "cloudiness = city_data_df[\"Cloudiness\"]\n",
+    "wind_speed = city_data_df[\"Wind Speed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11/01/20'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the scatter plot for latitude vs. max temperature.\n",
+    "plt.scatter(lats,\n",
+    "            max_temps,\n",
+    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
+    "            alpha=0.8, label=\"Cities\")\n",
+    "\n",
+    "# Incorporate the other graph properties.\n",
+    "plt.title(f\"City Latitude vs. Max Temperature \"+ time.strftime(\"%x\"))\n",
+    "plt.ylabel(\"Max Temperature (F)\")\n",
+    "plt.xlabel(\"Latitude\")\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Save the figure.\n",
+    "plt.savefig(\"weather_data/Fig1.png\")\n",
+    "\n",
+    "# Show plot.\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
